--- a/configs/callbacks/model_checkpoint.yaml
+++ b/configs/callbacks/model_checkpoint.yaml
@@ -1,16 +1,4 @@
 model_checkpoint:
   _target_: lightning.pytorch.callbacks.ModelCheckpoint
-  dirpath: null
-  filename: null
-  monitor: null
-  verbose: False
-  save_last: null
-  save_top_k: 1
-  save_weights_only: False
-  mode: "min"
-  auto_insert_metric_name: True
-  every_n_train_steps: null
-  train_time_interval: null
-  every_n_epochs: null
-  save_on_train_epoch_end: null
-  enable_version_counter: True
+  dirpath: ${hydra:runtime.output_dir}/checkpoints
+  save_last: True
