--- a/configs/logger/tensorboard.yaml
+++ b/configs/logger/tensorboard.yaml
@@ -1,9 +1,7 @@
 tensorboard:
   _target_: lightning.pytorch.loggers.TensorBoardLogger
-  name: tensorboard
-  save_dir: "${paths.output_dir}/tensorboard/"
-  version: null
+  save_dir: ${hydra:runtime.output_dir}/loggers
+  name: "tensorboard"
   log_graph: False
   default_hp_metric: True
   prefix: ""
-  sub_dir: null
