--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
   - callbacks: default
-  - logger: null
+  - logger: default
   - trainer: default
   - paths: default
   - hydra: default
