--- a/configs/model/unsupervised_ca_image_diffusion.yaml
+++ b/configs/model/unsupervised_ca_image_diffusion.yaml
@@ -1,7 +1,7 @@
 _target_: ca_diffusion.models.diffusion_unsupervised.DiffusionModel
 
 model:
-  _target_: ca_diffusion.modules.networks.diffusion.unet
+  _target_: ca_diffusion.modules.networks.diffusion.unet.UNet
   channels_in: 1
   channels: 64
   channels_emb: 512
@@ -13,14 +13,14 @@ model:
   qkv_bias: True
   qk_norm: True
   channels_freq: 256
-  compile: True
+  compile: False
   use_checkpoint: False
 
 diffusor:
-  _target_:
+  _target_: ca_diffusion.modules.diffusion.FlowMatching
 
 optimizer:
   _target_: torch.optim.AdamW
   _partial_: True
-  lr: {$learning_rate}
+  lr: 1e-4
   weight_decay: 0.0
