--- a/configs/data/neurofinder_image.yaml
+++ b/configs/data/neurofinder_image.yaml
@@ -1,6 +1,6 @@
 train:
   variant: "torch"
-  batch_size: {$batch_size}
+  batch_size: ${batch_size}
   num_workers: 8
   use_worker_init_fn: True
   pin_memory: True
@@ -10,6 +10,6 @@ train:
     _target_: ca_diffusion.data.calcium.CalciumDataset
     root_dir: "data/neurofinder"
     crop_size: [64,64]
-    num_crops_per_video: 100
+    num_crops_per_video: 10000
     use_video_segments: True
     load_annotations: False
