--- a/configs/experiment/test.yaml
+++ b/configs/experiment/test.yaml
@@ -7,5 +7,9 @@ tag: test
 
 data:
   train:
-    batch_size: 4
-    num_workers: 4
+    batch_size: 128
+    num_workers: 16
+
+model:
+  model: 
+    channels_in: 1
