--- a/configs/hydra/default.yaml
+++ b/configs/hydra/default.yaml
@@ -2,8 +2,8 @@ job:
   chdir: False
 #single run mode
 run: 
-  dir: ${paths.log_dir}/runs/{$tag}/${now:%Y-%m-%d}/${now:%H-%M-%S}
+  dir: ${paths.log_dir}/runs/${tag}/${now:%Y-%m-%d}/${now:%H-%M-%S}
 #multirun
 sweep:
-  dir: ${paths.log_dir}/multiruns/{$tag}/${now:%Y-%m-%d}/${now:%H-%M-%S}
+  dir: ${paths.log_dir}/multiruns/${tag}/${now:%Y-%m-%d}/${now:%H-%M-%S}
   subdir: ${hydra.job.num}
