--- a/configs/experiment/ca_ae3d.yaml
+++ b/configs/experiment/ca_ae3d.yaml
@@ -12,6 +12,7 @@ data:
     num_workers: 14
     config:
       crop_size: [65,64,64]
+      fixed_intensity_binning: True   
 
 model:
   encoder:
@@ -36,3 +37,4 @@ trainer:
   gradient_clip_val: 1.0
   precision: "bf16-mixed"
   accumulate_grad_batches: 4
+  max_epochs: 100
