--- a/configs/trainer/callbacks/model_checkpoint.yaml
+++ b/configs/trainer/callbacks/model_checkpoint.yaml
@@ -2,3 +2,4 @@ model_checkpoint:
   _target_: lightning.pytorch.callbacks.ModelCheckpoint
   dirpath: ${hydra:runtime.output_dir}/checkpoints
   save_last: True
+  every_n_train_steps: 5000
