--- a/configs/experiment/ca_diffae3d_lv.yaml
+++ b/configs/experiment/ca_diffae3d_lv.yaml
@@ -8,10 +8,10 @@ tag: ca_video_diffusion_ae
 
 data:
   train:
-    batch_size: 14
-    num_workers: 14
+    batch_size: 2
+    num_workers: 2
     config:
-      crop_size: [65,64,64]
+      crop_size: [129,128,128]
       fixed_intensity_binning: True
 
 model:
@@ -36,11 +36,11 @@ model:
     compile: True
 
   image_mode: False
-  noise_shape: [1,65,64,64]
+  noise_shape: [1,129,128,128]
   ema_update_steps: 1
 
 trainer:
   gradient_clip_val: 1.0
-  precision: "bf16-mixed"
-  accumulate_grad_batches: 4
+  precision: "bf16"
+  accumulate_grad_batches: 16
   max_epochs: 100
