--- a/configs/model/ca_latent_diffusion.yaml
+++ b/configs/model/ca_latent_diffusion.yaml
@@ -1,10 +1,9 @@
 _target_: ca_diffusion.models.diffusion.LatentDiffusionModel
 
-first_stage:
-  pass #TODO: fill in
+first_stage_ckpt: ???
 
 model:
-  _target_: ca_diffusion.moules.networks.dit.DiT
+  _target_: ca_diffusion.modules.networks.diffusion.dit.DiT
   channels_in: 16
   channels: 768
   channels_emb: 1024
@@ -30,4 +29,4 @@ optimizer:
   lr: 1e-4
   weight_decay: 0.0
 
-latent_data: False
+precomputed_latents: False
